--- a/Gijima.IOBM.Shell/App.config
+++ b/Gijima.IOBM.Shell/App.config
@@ -16,8 +16,8 @@
   </connectionStrings>
   <appSettings>
     <add key="TransactionScopeTimeOutInMinute" value="3" />
-    <add key="ReportPath" value="\\VDB-ISS\IOBM$\Deployment\Production\Reports\" />
-    <!--<add key="ReportPath" value="c:\ProgramData\MobileManager\Reports\" />-->
+    <!--<add key="ReportPath" value="\\VDB-ISS\IOBM$\Deployment\Production\Reports\" />-->
+    <add key="ReportPath" value="c:\ProgramData\MobileManager\Reports\" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
