--- a/Gijima.IOBM.Shell/Gijima.IOBM.Shell.csproj
+++ b/Gijima.IOBM.Shell/Gijima.IOBM.Shell.csproj
@@ -59,10 +59,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>0D5797BB93983CC7FC969B0BD9F3373555E850AA</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>26ADB3A51A97625F7E24A40970F634C9F99231C4</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Gijima.IOBM.Shell_1_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Gijima.IOBM.Shell_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -184,7 +184,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Gijima.IOBM.Shell_1_TemporaryKey.pfx" />
+    <None Include="Gijima.IOBM.Shell_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
