--- a/Gijima.IOBM.Model/App.Config
+++ b/Gijima.IOBM.Model/App.Config
@@ -5,8 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NB-SRD23135;initial catalog=IOBM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MobileManager_DevEntities" connectionString="metadata=res://*/Data.Model1.csdl|res://*/Data.Model1.ssdl|res://*/Data.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB25066;initial catalog=MobileManager_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NB-SRD23135;initial catalog=IOBM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="MobileManager_DevEntities" connectionString="metadata=res://*/Data.Model1.csdl|res://*/Data.Model1.ssdl|res://*/Data.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB25066;initial catalog=MobileManager_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="MobileManagerEntities" connectionString="metadata=res://*/Data.Model1.csdl|res://*/Data.Model1.ssdl|res://*/Data.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-LAPTOP\Elmer-Laptop;initial catalog=MobileManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
