Elmer - Fix other ID save - Fix New Person select new device

--- a/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
+++ b/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
@@ -126,6 +126,7 @@
     <Compile Include="MobileManagerController.cs" />
     <Compile Include="MobileManagerModule.cs" />
     <Compile Include="ViewModels\ViewAccountViewModel.cs" />
+    <Compile Include="ViewModels\ViewAdvancedSearchViewModel.cs" />
     <Compile Include="ViewModels\ViewAuditLogViewModel.cs" />
     <Compile Include="ViewModels\ViewBasicSearchViewModel.cs" />
     <Compile Include="ViewModels\ViewBillingLevelViewModel.cs" />
