Elmer Some Advanced Search

--- a/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
+++ b/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
@@ -123,6 +123,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedSearchEntities.cs" />
     <Compile Include="MobileManagerController.cs" />
     <Compile Include="MobileManagerModule.cs" />
     <Compile Include="ViewModels\ViewAccountViewModel.cs" />
