--- a/Modules/MobileManager/Model/Gijima.IOBM.MobileManager.Model/Gijima.IOBM.MobileManager.Model.csproj
+++ b/Modules/MobileManager/Model/Gijima.IOBM.MobileManager.Model/Gijima.IOBM.MobileManager.Model.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Data\DeviceModel.cs">
       <DependentUpon>MobileManagerEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\Extentions\ClientExt.cs" />
     <Compile Include="Data\Extentions\CompanyBillingLevelExt.cs" />
     <Compile Include="Data\Extentions\CompanyExt.cs" />
     <Compile Include="Data\Extentions\ContractServiceExt.cs" />
