Elmer - Data Update

--- a/Gijima.IOBM.Shell/App.config
+++ b/Gijima.IOBM.Shell/App.config
@@ -3,14 +3,15 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <!--<add name="MobileManagerEntities" connectionString="metadata=res://*/Data.MobileManagerEntities.csdl|res://*/Data.MobileManagerEntities.ssdl|res://*/Data.MobileManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VDB-ISS;initial catalog=IOBM-MobileManager;user=IOBMUser;password=appuser;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="MobileManagerEntities" connectionString="metadata=res://*/Data.MobileManagerEntities.csdl|res://*/Data.MobileManagerEntities.ssdl|res://*/Data.MobileManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB23659;initial catalog=IOBM-MobileManager_Dev;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="MobileManagerEntities" connectionString="metadata=res://*/Data.MobileManagerEntities.csdl|res://*/Data.MobileManagerEntities.ssdl|res://*/Data.MobileManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-LAPTOP;initial catalog=IOBM-MobileManager;user=sa;password=Password123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="MobileManagerEntities" connectionString="metadata=res://*/Data.MobileManagerEntities.csdl|res://*/Data.MobileManagerEntities.ssdl|res://*/Data.MobileManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB23659;initial catalog=IOBM-MobileManager_Dev;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="MobileManagerEntities" connectionString="metadata=res://*/Data.MobileManagerEntities.csdl|res://*/Data.MobileManagerEntities.ssdl|res://*/Data.MobileManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-LAPTOP;initial catalog=IOBM-MobileManager;user=sa;password=Password123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VDB-ISS;initial catalog=IOBM;user=IOBMUser;password=appuser;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB23659;initial catalog=IOBM_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-LAPTOP;initial catalog=IOBM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRD-NB23659;initial catalog=IOBM_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="IOBMEntities" connectionString="metadata=res://*/Data.IOBMModel.csdl|res://*/Data.IOBMModel.ssdl|res://*/Data.IOBMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ELMER-LAPTOP;initial catalog=IOBM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="IOBMDomain" connectionString="LDAP://gijima.com/DC=gijima,DC=com" />
     <add name="MobileManagerDomain" connectionString="LDAP://gijima.com/DC=gijima,DC=com" />
   </connectionStrings>
@@ -18,6 +19,7 @@
     <add key="TransactionScopeTimeOutInMinute" value="3" />
     <add key="ReportPath" value="\\VDB-ISS\IOBM$\Deployment\Production\Reports\" />
     <!--<add key="ReportPath" value="c:\ProgramData\MobileManager\Reports\" />-->
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -29,4 +31,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
