--- a/Gijima.IOBM.Shell/Gijima.IOBM.Shell.csproj
+++ b/Gijima.IOBM.Shell/Gijima.IOBM.Shell.csproj
@@ -59,7 +59,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>2A4892FA6D61DE6D8329324DE285F59AF25F563A</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>1A79C68A422423BC9597A826B9E671640B46FFA3</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestKeyFile>Gijima.IOBM.Shell_TemporaryKey.pfx</ManifestKeyFile>
@@ -106,9 +106,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Controls.Input.Toolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\System.Windows.Controls.Input.Toolkit.dll</HintPath>
       <Private>True</Private>
