--- a/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
+++ b/Modules/MobileManager/Gijima.IOBM.MobileManager.csproj
@@ -137,7 +137,7 @@
     <Compile Include="ViewModels\ViewCompanyBillingLevelViewModel.cs" />
     <Compile Include="ViewModels\ViewCompanyGroupViewModel.cs" />
     <Compile Include="ViewModels\ViewContractServiceViewModel.cs" />
-    <Compile Include="ViewModels\ViewDataImportExtViewModel.cs" />
+    <Compile Include="ViewModels\ViewExtDataImportViewModel.cs" />
     <Compile Include="ViewModels\ViewDataUpdateViewModel.cs" />
     <Compile Include="ViewModels\ViewDataImportIntViewModel.cs" />
     <Compile Include="ViewModels\ViewDataUpdateViewModelOld.cs" />
@@ -184,8 +184,8 @@
     <Compile Include="Views\SystemTools\ViewDataUpdate.xaml.cs">
       <DependentUpon>ViewDataUpdate.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\SystemTools\ViewDataImportExt.xaml.cs">
-      <DependentUpon>ViewDataImportExt.xaml</DependentUpon>
+    <Compile Include="Views\Billing\ViewExtDataImport.xaml.cs">
+      <DependentUpon>ViewExtDataImport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SystemTools\ViewDataValidation.xaml.cs">
       <DependentUpon>ViewDataValidation.xaml</DependentUpon>
@@ -306,7 +306,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\SystemTools\ViewDataImportExt.xaml">
+    <Page Include="Views\Billing\ViewExtDataImport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
