--- a/Modules/MobileManager/Model/Gijima.IOBM.MobileManager.Model/Gijima.IOBM.MobileManager.Model.csproj
+++ b/Modules/MobileManager/Model/Gijima.IOBM.MobileManager.Model/Gijima.IOBM.MobileManager.Model.csproj
@@ -70,6 +70,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\AdvancedSearchField.cs">
+      <DependentUpon>MobileManagerEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\AppSetting.cs">
       <DependentUpon>MobileManagerEntities.tt</DependentUpon>
     </Compile>
@@ -230,6 +233,7 @@
       <DependentUpon>MobileManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Helpers\EDMHelper.cs" />
+    <Compile Include="Models\AdvancedSearchFieldModel.cs" />
     <Compile Include="Models\AppSettingModel.cs" />
     <Compile Include="Models\AuditLogModel.cs" />
     <Compile Include="Models\BillingLevelModel.cs" />
