--- a/Modules/MobileManager/Properties/Settings.settings
+++ b/Modules/MobileManager/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=NB-SRD23135;Initial Catalog=MobileManager;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework</Value>
     </Setting>
+    <Setting Name="IOBM_MobileManager_DevConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=SRD-NB23659;Initial Catalog=IOBM-MobileManager_Dev;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=SRD-NB23659;Initial Catalog=IOBM-MobileManager_Dev;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
